--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,16 @@ h6 {
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 /* Header */
 .header {
   position: fixed;
